<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favorites" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_download"
        android:title="@string/menu_download" />

    <item
        android:id="@+id/action_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/menu_bookmarks" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>